tests/fixtures/parse_errors/deep_nest.furqan
bismillah DeepNest {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: torture
    not_scope: nothing_excluded
}

fn deep() -> Integrity {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
    if not stop {
        return Integrity
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
}
